remove unnecessary codes, add event section and footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css?family=Roboto Condensed"
       rel="stylesheet"
     />
+    <script
+      async
+      defer
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"
+    ></script>
     <title>JCOR</title>
   </head>
   <body>
